# libjson

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  meson.build  meson.options  test.c  test.sh
.github/workflows/: ci.yml
.gitlab/: build.yml  cleanup.yml  lint.yml  release.yml  test.yml
examples/: test.json
inc/: libjson.h
src/json/: node.c  type.c
src/lexer/: lexer.c  token.c
src/parser/: parser.c
src/utils/: file.c
src/version/: version.c
tests/file/: meson.build  test_file_1.c  test_file_2.c
tests/json/: meson.build  test_json_1.c  test_json_10.c  test_json_11.c  test_json_12.c  test_json_13.c  test_json_2.c  test_json_3.c  test_json_4.c  test_json_5.c  test_json_6.c  test_json_7.c  test_json_8.c  test_json_9.c
tests/lexer/: meson.build  test_lexer_1.c  test_lexer_2.c  test_lexer_3.c  test_lexer_4.c
tests/parser/: meson.build  test_parser_test_1.c
tests/version/: meson.build  test_version.c
